# dali_module

./: .clang-format  .gitignore  CMakeLists.txt  MCP23008.txt  encrypted_partition_table.csv  sdkconfig  sdkconfig.c3  sdkconfig.c3encrypt  sdkconfig.c3wifi  sdkconfig.old  sdkconfig.s3
components/cJSON/: CMakeLists.txt  cJSON.c
main/: CMakeLists.txt  dali.c  dali.h  idf_component.yml  json_util.c  json_util.h  main.c  pin_define.h  platform.h  util.c  util.h  version.h
main/bg95/: at.c  at.h  bg95.c  bg95.h  firmware_update.c  firmware_update.h
main/esp/: esp_gpio.c  esp_i2c.c  esp_nvs.c  esp_time.c  esp_timing.c  esp_uart.c
main/web/: web.c  web.h
